2010-07-06  Andreas Kupries  <andreask@activestate.com>

	* doc/text.n: Fixed minor typo in the description of 'text
	  delete', as reported by <eee@users.sf.net> on the chat.

2010-07-01  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/rules.vc   [Bugs #3020677] wish can't link reg1.2

2010-06-22  Anton Kovalenko  <a_kovalenko@users.sf.net>

	* generic/tkPlace.c: [Patch #3019624] modify "place" command,
	making it get main window through ClientData (like grid or pack
	do), instead of calling Tk_MainWindow(interp).
	* generic/tkWindow.c: modify "place" entry in commands[],
	turn on passMainWindow flag.

2010-06-22  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/ttk/ttkGenStubs.tcl [Bug #3019363] "make genstubs" failure
	* generic/ttk/ttkDecls.h      (regenerated)
	* generic/ttk/ttkTheme.c      Unnecessary type cast

2010-06-21  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkInt.decls  [Patch #2999889] TkCopyAndGlobalEval obsolete
	* generic/tkIntDecls.h
	* generic/tkBind.c
	* generic/tkStubInit.c

2010-06-19  Joe English  <jenglish@users.sourceforge.net>

	* win/tkWinScrlbr.c, carbon/tkMacOSXScrlbr.c: Replace binding
	  procedures with ordinary event handlers [Patch 3009998].
	* generic/tkBind.c, generic/tk.h, generic/tkInt.h,
	  generic/tkInt.decls: Simplifications enabled by previous change:
	  TkCreateBindingProcedure() and associated machinery
	  no longer needed; TkBindDeadWindow() no longer needed;
	  TK_DEFER_MODAL_LOOP and associated machinery no longer needed.
	* generic/tkTest.c, tests/bind.test: Tests related to C binding
	  procedures no longer needed.
	* generic/tkWindow.c: TkBindDeadWindow() no longer needed.
	* generic/tkIntDecls.h, generic/tkStubInit.c: Regenerated.

2010-06-15  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/ttk.tcl: Bump dummy [package ifneeded tile] version
	to 0.8.6; see [Bug 3016598].

2010-06-15  Donal K. Fellows  <dkf@users.sf.net>

	* library/text.tcl (TextCursorInSelection): [Patch 2585265]: Make it